--- a/templates.cfg
+++ b/templates.cfg
@@ -53,6 +53,7 @@ Entity views.xml    ; views.xml                  ; ${WEB}/WEB-INF/views/${BEANNA
 Entity JSP form     ; ${BEANNAME_LC}_form.jspx   ; ${WEB}/WEB-INF/views/${BEANNAME_LC}  ; web_view/ENTITY_form_jspx.vm             ; *
 Entity JSP list     ; ${BEANNAME_LC}_list.jspx   ; ${WEB}/WEB-INF/views/${BEANNAME_LC}  ; web_view/ENTITY_list_jspx.vm             ; *
 Type conversion     ; ConversionServiceFactoryBean.java ; ${SRC}/${ROOT_PKG}/web/convert    ; web_convert/ConversionServiceFactoryBean_java.vm ; 1
+Type conversion Test; ConversionServiceFactoryBeanTest.java ; ${TEST_SRC}/${ROOT_PKG}/web/convert    ; web_convert/ConversionServiceFactoryBeanTest_java.vm ; 1
 
 # REST
 Rest Entity Controller   ; ${BEANNAME}RestController.java             ; ${SRC}/${ROOT_PKG}/rest/controller    ; rest_controller/ENTITY_Rest_Controller_java.vm ; *
